fix css spacing"

--- a/src/Components/Favorites/Favorites.css
+++ b/src/Components/Favorites/Favorites.css
@@ -12,19 +12,6 @@
     border-radius: 20px;
 }
 
-/* .favorites-card {
-    position: relative;
-    height: 60vh;
-    width: 60vw;
-    background-color: rgba(21, 24, 35, 0.7);
-    box-shadow: inset 2px 2px 10px rgb(0 0 0 / 30%);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex-direction: row;
-    border-radius: 20px;
-} */
-
 .favorites-section:before {
     position: absolute;
     content: '';
